--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>INSPIRANIUM - EGG</title>
+    <meta name='Author' CONTENT='Victor Dalet'>
+    <link rel='icon' href='../assets/logo.png'>
+    <meta name='description' content='Welcome to our photo storage application. Here you can find great photos, while discovering new artists. Do not hesitate to explore it or to publish your best work...'>
 </head>
 <body>
 
